src/objects/Roles__c.object
<CustomObject>
    <description>Custom version of Contact Roles</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Captures the related account record</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Captures the related contact</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Is_Corporate_Contact__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Initial results are limited to contacts at the school only. Remove the filter to search all contacts</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Fullname__c</fullName>
        <description>Formula field which concatenates the contact&apos;s first and last names</description>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fullname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is the primary contact</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Captures the assigned role (staff) within a secondary school</description>
        <inlineHelpText>Captures the assigned role (staff) within a secondary school</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Access Monash - Main Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Monash Yr 10 Champion Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Monash - Yr 9 Champion Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business and Commerce Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Careers Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifted Student Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of careers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indigenous Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Student Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Studies Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Studies Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOTE Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maths Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Scholars Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathways Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAL Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOSE Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCE Art &amp; Design Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCE Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 10 Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 11 Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 12 Co-ordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Role</label>
    <nameField>
        <displayFormat>ROL-{00000}</displayFormat>
        <label>Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>